# KiritoLang

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  ruff.toml
.claude/: POST_WORK_CHECKLIST.md  settings.json
.claude/hooks/: block_new_branches.py
.github/workflows/: release.yml
Archive/V1/: Cache.h  ClassDeclarations.h  Kirito.sln  Kirito.vcxproj  Kirito.vcxproj.filters  LICENSE  Math.h  Matrix.h  Misc.h  README.md  Statistics.cpp  Statistics.h  StlOverloads.cpp  StlOverloads.h  TypesFirstLayer.cpp  TypesFirstLayer.h  TypesSecondLayer.cpp  TypesSecondLayer.h  VariableModel.cpp  VariableModel.h  main.cpp  notes.txt
Archive/V2/: Bool.hpp  Kirito.sln  Kirito.vcxproj  Kirito.vcxproj.filters  Math.cpp  Math.hpp  Misc.hpp  Number.cpp  Number.hpp  README.md  String.cpp  String.hpp  TemplateMatrix.hpp  main.cpp  main.ki
docs/: README.md  build_docs.py
docs/editors/: README.md
docs/pages/: 00-introduction.md  01-getting-started.md  02-embedding.md  03-extending.md  04-language-guide.md  05-builtins.md  06-stdlib.md  06-types.md  07-stdlib.md  08-course-basics.md  08-recipes.md  09-course-00-editor.md  09-course-data-functions.md  09-packages.md  10-course-00-editor.md  10-course-01-hello.md  10-course-classes-projects.md  11-course-02-values-numbers.md  11-course-02-values.md  12-course-02-values-numbers.md  12-course-03-numbers.md  12-course-03-strings.md  13-course-04-control-loops.md  13-course-04-strings.md  14-course-04-control-loops.md  14-course-05-collections.md  (+54 more)
editors/: README.md
examples/: rule34_download.ki  solve_systems.ki  tabular_iris.ki  todo.ki
include/: kirito.hpp
kpm/: kpm.ki
sample_projects/: complex_linsolve.ki  gen_systems.ki  rpn_calculator.ki  rule34_download.ki  solve_systems.ki
scripts/: build_all.sh  build_release.sh  install.ps1  install.sh  post_work_check.sh  test_release.sh
src/: kirito.hpp
tests/: CMakeLists.txt  run_ki_script.cmake
tests/bench/: README.md  compare.py  compare_bench.ki
tests/errors/: hash_non_string.experr  isinstance_bad_type.experr  pandas_col_length.ki  pandas_index_length.ki  single_quote_string.experr  single_quote_string.ki
tests/fuzz/: fuzz_eval.cpp
tests/integration/: embed_demo.cpp
tests/scripts/: classes.ki  complex.ki  complex_demo.expected  exceptions.expected  exceptions.ki  file_io.ki  hostile.ki  libraries.ki  probe_adversarial2.ki  probe_kwargs.ki  probe_levenshtein.ki  probe_natives_full.ki  probe_serde.ki  probe_serde_matrix.ki  probe_surface.expected  probe_xml.ki  sample_linsolve.expected  sample_linsolve.ki  sample_pipeline.ki  sample_systems.expected  sample_systems.ki  sample_wordcount.ki  spec_arg.ki  spec_builtins.ki  spec_classes.ki  spec_complex.ki  spec_conditional.ki  spec_control.ki  spec_edges.ki  spec_float_special.ki  spec_fstrings.ki  spec_inspect.ki  spec_io.ki  spec_io_stream.ki  spec_iter_mutation.ki  spec_kwargs.ki  spec_levenshtein.ki  spec_math.ki  spec_matrix.ki  spec_modules.ki  (+15 more)
tests/unit/: test_builtins.cpp  test_bytesio.cpp  test_classes.cpp  test_complex.cpp  test_conditional.cpp  test_control.cpp  test_dump.cpp  test_eval_arith.cpp  test_eval_vars.cpp  test_exceptions.cpp  test_exceptions_cpp.cpp  test_extras.cpp  test_fstring.cpp  test_hardening.cpp  test_hardening2.cpp  test_hash.cpp  test_hostile_libs.cpp  test_imports.cpp  test_indent.cpp  test_introspect.cpp  test_io.cpp  test_json.cpp  test_lexer.cpp  test_list_ops.cpp  test_matrix.cpp  test_modules.cpp  test_modules_fuzz.cpp  test_namedargs.cpp  test_net.cpp  test_pandas.cpp  test_references.cpp  test_regex.cpp  test_regex_corpus.cpp  test_serde.cpp  test_serialize.cpp  test_sort.cpp  test_stdlib.cpp  test_stdlib_extra.cpp  test_stdlib_gaps.cpp  test_stdmodules.cpp  (+15 more)
tools/: kpm.ki
tools/tests/: CMakeLists.txt  kpm_integration.py  parallel_util.hpp  run_ki_script.cmake
tools/tests/bench/: README.md  bench.cpp
tools/tests/errors/: path_mkdir_exists.ki  surf_exc_12.ki  surf_exc_13.ki  surf_exc_14.ki  surf_exc_15.ki  surf_exc_16.ki  surf_exc_17.ki  surf_exc_18.ki  surf_lib_01.ki  surf_lib_12.ki  surf_lib_13.ki  surf_lib_14.ki  surf_lib_15.ki  surf_lib_16.ki  surf_lib_17.ki  surf_lib_18.ki  surf_lib_19.ki  surf_lib_20.ki  surf_lib_21.ki  surf_lib_22.ki  surf_lib_23.ki  surf_lib_24.ki  surf_num_01.ki  surf_num_02.ki  surf_num_03.ki  surf_num_04.ki  surf_num_05.ki  surf_num_06.ki  surf_num_07.ki  surf_num_08.ki  surf_num_15.ki  surf_num_16.ki  surf_num_17.ki  surf_num_18.ki  surf_parse_13.experr
tools/tests/integration/: embed_demo.cpp
tools/tests/scripts/: amarg_assert.ki  amarg_try.ki  argmain_arglist.ki  arithmetic.ki  audit_adversarial.ki  audit_bisect.ki  audit_builtins.ki  audit_cli_argv_probe.ki  audit_complex.ki  audit_csv.expected  audit_followups.ki  audit_heapq.ki  audit_json.expected  audit_langguide.ki  audit_math.expected  audit_math.ki  audit_matrix.ki  audit_net.ki  audit_parallel.ki  audit_random.ki  audit_recipes.ki  audit_regex.expected  audit_regex.ki  audit_statistics.ki  audit_sys.ki  audit_tabular.ki  audit_tensor.ki  audit_time.ki  audit_types.ki  audit_xml.expected  deep_compress.ki  deep_kimods.ki  deep_numeric.expected  deep_numeric.ki  deep_runtime.ki  deep_serialization.ki  deep_system.ki  deep_tabular.ki  deep_text.ki  file_io.ki  (+162 more)
tools/tests/unit/: test_adversarial.cpp  test_apply.cpp  test_audit_findings.cpp  test_audit_fixes.cpp  test_audit_regressions.cpp  test_audit_round2.cpp  test_builtins.cpp  test_bytecode.cpp  test_bytes.cpp  test_complex.cpp  test_conditional.cpp  test_domain_guards.cpp  test_dump.cpp  test_eval_arith.cpp  test_exceptions.cpp  test_exceptions_cpp.cpp  test_extras.cpp  test_hardening.cpp  test_hardening2.cpp  test_hash.cpp  test_hostile_libs.cpp  test_imports.cpp  test_io.cpp  test_kpm.cpp  test_list_ops.cpp  test_matrix.cpp  test_modules_fuzz.cpp  test_namedargs.cpp  test_net.cpp  test_parallel.cpp  test_parallel_edge.cpp  test_path.cpp  test_proc.cpp  test_r4_cpp_api.cpp  test_r5_internals.cpp  test_r6_internals.cpp  test_r7_embed_api.cpp  test_r8_embed_api.cpp  test_random.cpp  test_regex.cpp  (+19 more)
(+253 files in other folders)
