# One small executable per test file (one behavior-area each), linking the header-only core.
function(kirito_test name)
    add_executable(${name} ${ARGN})
    target_link_libraries(${name} PRIVATE kirito)
    target_compile_options(${name} PRIVATE -Wall -Wextra -Wpedantic)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

kirito_test(test_arena unit/test_arena.cpp)
kirito_test(test_lexer unit/test_lexer.cpp)
kirito_test(test_eval_arith unit/test_eval_arith.cpp)
kirito_test(test_eval_vars unit/test_eval_vars.cpp)
kirito_test(test_indent unit/test_indent.cpp)
kirito_test(test_control unit/test_control.cpp)
kirito_test(test_functions unit/test_functions.cpp)
kirito_test(test_collections unit/test_collections.cpp)
kirito_test(test_modules unit/test_modules.cpp)
kirito_test(test_strings unit/test_strings.cpp)
kirito_test(test_gc unit/test_gc.cpp)
kirito_test(test_exceptions unit/test_exceptions.cpp)
