# One small executable per test file (one behavior-area each), linking the header-only core.
function(kirito_test name)
    add_executable(${name} ${ARGN})
    target_link_libraries(${name} PRIVATE kirito)
    target_compile_options(${name} PRIVATE -Wall -Wextra -Wpedantic)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

kirito_test(test_arena unit/test_arena.cpp)
kirito_test(test_lexer unit/test_lexer.cpp)
kirito_test(test_eval_arith unit/test_eval_arith.cpp)
kirito_test(test_eval_vars unit/test_eval_vars.cpp)
kirito_test(test_indent unit/test_indent.cpp)
kirito_test(test_control unit/test_control.cpp)
kirito_test(test_functions unit/test_functions.cpp)
kirito_test(test_collections unit/test_collections.cpp)
kirito_test(test_modules unit/test_modules.cpp)
kirito_test(test_strings unit/test_strings.cpp)
kirito_test(test_gc unit/test_gc.cpp)
kirito_test(test_exceptions unit/test_exceptions.cpp)
kirito_test(test_classes unit/test_classes.cpp)
kirito_test(test_with unit/test_with.cpp)
kirito_test(test_string_ops unit/test_string_ops.cpp)
kirito_test(test_stdlib unit/test_stdlib.cpp)
kirito_test(test_extras unit/test_extras.cpp)
kirito_test(test_fstring unit/test_fstring.cpp)
kirito_test(test_references unit/test_references.cpp)

kirito_test(embed_demo integration/embed_demo.cpp)
kirito_test(fuzz_eval fuzz/fuzz_eval.cpp)
kirito_test(bench bench/bench.cpp)

# --- end-to-end .ki script tests (run through the `ki` interpreter, diff vs .expected) ---
file(GLOB ki_scripts ${CMAKE_CURRENT_SOURCE_DIR}/scripts/*.ki)
foreach(script ${ki_scripts})
    get_filename_component(nm ${script} NAME_WE)
    set(expected ${CMAKE_CURRENT_SOURCE_DIR}/scripts/${nm}.expected)
    set(input ${CMAKE_CURRENT_SOURCE_DIR}/scripts/${nm}.in)
    set(extra "")
    if(EXISTS ${input})
        set(extra -DINPUT=${input})
    endif()
    add_test(NAME script_${nm}
             COMMAND ${CMAKE_COMMAND} -DKI=$<TARGET_FILE:ki> -DSCRIPT=${script}
                     -DEXPECTED=${expected} ${extra}
                     -P ${CMAKE_CURRENT_SOURCE_DIR}/run_ki_script.cmake)
endforeach()
