# One small executable per test file (one behavior-area each), linking the header-only core.
find_package(Threads REQUIRED)
function(kirito_test name)
    add_executable(${name} ${ARGN})
    target_link_libraries(${name} PRIVATE kirito Threads::Threads)
    target_compile_options(${name} PRIVATE -Wall -Wextra -Wpedantic)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

kirito_test(test_arena unit/test_arena.cpp)
kirito_test(test_lexer unit/test_lexer.cpp)
kirito_test(test_eval_arith unit/test_eval_arith.cpp)
kirito_test(test_eval_vars unit/test_eval_vars.cpp)
kirito_test(test_indent unit/test_indent.cpp)
kirito_test(test_control unit/test_control.cpp)
kirito_test(test_functions unit/test_functions.cpp)
kirito_test(test_collections unit/test_collections.cpp)
kirito_test(test_modules unit/test_modules.cpp)
kirito_test(test_strings unit/test_strings.cpp)
kirito_test(test_gc unit/test_gc.cpp)
kirito_test(test_exceptions unit/test_exceptions.cpp)
kirito_test(test_exceptions_cpp unit/test_exceptions_cpp.cpp)
kirito_test(test_classes unit/test_classes.cpp)
kirito_test(test_with unit/test_with.cpp)
kirito_test(test_string_ops unit/test_string_ops.cpp)
kirito_test(test_stdlib unit/test_stdlib.cpp)
kirito_test(test_extras unit/test_extras.cpp)
kirito_test(test_fstring unit/test_fstring.cpp)
kirito_test(test_references unit/test_references.cpp)
kirito_test(test_imports unit/test_imports.cpp)
kirito_test(test_builtins unit/test_builtins.cpp)
kirito_test(test_random unit/test_random.cpp)
kirito_test(test_matrix unit/test_matrix.cpp)
kirito_test(test_multi_index unit/test_multi_index.cpp)
kirito_test(test_class_ops unit/test_class_ops.cpp)
kirito_test(test_json unit/test_json.cpp)
kirito_test(test_net unit/test_net.cpp)
kirito_test(test_serialize unit/test_serialize.cpp)
kirito_test(test_sys unit/test_sys.cpp)
kirito_test(test_time unit/test_time.cpp)
kirito_test(test_dump unit/test_dump.cpp)
kirito_test(test_zlib unit/test_zlib.cpp)
kirito_test(test_hash unit/test_hash.cpp)
kirito_test(test_sort unit/test_sort.cpp)
kirito_test(test_hostile_libs unit/test_hostile_libs.cpp)
kirito_test(test_io unit/test_io.cpp)
kirito_test(test_namedargs unit/test_namedargs.cpp)
kirito_test(test_adversarial unit/test_adversarial.cpp)
kirito_test(test_unpacking unit/test_unpacking.cpp)
kirito_test(test_stdmodules unit/test_stdmodules.cpp)
kirito_test(test_introspect unit/test_introspect.cpp)
kirito_test(test_warnings unit/test_warnings.cpp)
kirito_test(test_unicode unit/test_unicode.cpp)
kirito_test(test_hardening unit/test_hardening.cpp)
kirito_test(test_stdlib_extra unit/test_stdlib_extra.cpp)
kirito_test(test_bytesio unit/test_bytesio.cpp)

kirito_test(embed_demo integration/embed_demo.cpp)
kirito_test(fuzz_eval fuzz/fuzz_eval.cpp)
kirito_test(bench bench/bench.cpp)

# --- end-to-end .ki script tests (run through the `ki` interpreter, diff vs .expected) ---
# A .ki file is only registered as a test if it has a matching .expected; this lets library
# files (imported by other scripts, e.g. complex.ki) live alongside without being run directly.
file(GLOB ki_scripts ${CMAKE_CURRENT_SOURCE_DIR}/scripts/*.ki)
foreach(script ${ki_scripts})
    get_filename_component(nm ${script} NAME_WE)
    set(expected ${CMAKE_CURRENT_SOURCE_DIR}/scripts/${nm}.expected)
    if(NOT EXISTS ${expected})
        continue()
    endif()
    set(input ${CMAKE_CURRENT_SOURCE_DIR}/scripts/${nm}.in)
    set(extra "")
    if(EXISTS ${input})
        set(extra -DINPUT=${input})
    endif()
    add_test(NAME script_${nm}
             COMMAND ${CMAKE_COMMAND} -DKI=$<TARGET_FILE:ki> -DSCRIPT=${script}
                     -DEXPECTED=${expected} ${extra}
                     -P ${CMAKE_CURRENT_SOURCE_DIR}/run_ki_script.cmake)
endforeach()

# --- error-message tests: .ki files that MUST fail, with a .experr of required diagnostic text ---
# Verifies the interpreter reports actionable errors (syntax, indentation, runtime, annotations)
# rather than crashing or going silent. Auto-discovered, so new cases need no CMake edits.
file(GLOB ki_error_scripts ${CMAKE_CURRENT_SOURCE_DIR}/errors/*.ki)
foreach(script ${ki_error_scripts})
    get_filename_component(nm ${script} NAME_WE)
    set(expected ${CMAKE_CURRENT_SOURCE_DIR}/errors/${nm}.experr)
    if(NOT EXISTS ${expected})
        continue()
    endif()
    add_test(NAME error_${nm}
             COMMAND ${CMAKE_COMMAND} -DKI=$<TARGET_FILE:ki> -DSCRIPT=${script}
                     -DEXPECTED=${expected}
                     -P ${CMAKE_CURRENT_SOURCE_DIR}/run_ki_error.cmake)
endforeach()
